# CMPCC

./: .gitignore  README.md  install_dds.sh  install_tools.sh  pp.yaml  rpp.yaml
_ShootBall/: Config-1VM.json  Config-3VM.json  Config.json  PX4MavCtrlV4.py  PX4MavCtrlV4ROS.py  VisionCaptureApi.py  _client_ue4_HITL.bat  _mav_print.py  client_ue4.py  client_ue4_SITL-1VM.bat  client_ue4_SITL.bat  readme.txt  server_ue4.py  server_ue4ROS.py  server_ue4ROS_Serial.py  server_ue4_Serial.py
_scripts/: all.sh  bag_fix.sh
src/bs_assis/: CMakeLists.txt  package.xml  readme.md
src/bs_assis/dds_gen/: BBoxData.cxx  BBoxData.h  BBoxDataPubSubTypes.cxx  BBoxDataPubSubTypes.h  BBoxesData.cxx  BBoxesData.h  BBoxesDataPubSubTypes.cxx  BBoxesDataPubSubTypes.h  MassPointData.cxx  MassPointData.h  MassPointDataPubSubTypes.cxx  MassPointDataPubSubTypes.h  MassPointsData.cxx  MassPointsData.h  MassPointsDataPubSubTypes.cxx  MassPointsDataPubSubTypes.h  MavData.cxx  MavData.h  MavDataPubSubTypes.cxx  MavDataPubSubTypes.h
src/bs_assis/dds_msg/: BBoxData.idl  BBoxesData.idl  MassPointData.idl  MassPointsData.idl  MavData.idl
src/bs_assis/launch/: bs_dds.launch  bs_mavros.launch
src/bs_assis/src/: DDS_NodeBase.h  MassPointsDataNode.cpp  MassPointsDataNode.h  MavDataNode.cpp  MavDataNode.h  dds_node.cpp  dds_node.hpp
src/cmpcc/: CMakeLists.txt
src/cmpcc/config/: mpcParameters.yaml
src/cmpcc/include/: display_msgs.h  map.h  map.h.bkk  mpc_solver.h
src/cmpcc/launch/: fly.launch  pva_chasing.launch  rviz_view.launch
src/cmpcc/script/: bezier.py  find_nearest.py
src/cmpcc/src/: display_msg.cpp  fly.cpp  map.cpp  map.cpp.bkk  model.cpp  mpc_solver.cpp  pva_chasing.cpp  simulation_node.cpp
src/detection/: CMakeLists.txt  package.xml
src/detection/launch/: det_sim.launch
src/detection/script/: img_pub.py
src/detection/src/: color_det.cpp  color_det_with_3D_estimation.cpp  undistortion_for_video.cpp
src/examples/0_debug/: all.sh
src/examples/1_circular/: all.sh  balloon_motion copy.yaml  balloon_motion.yaml
src/examples/2_attack/: all.sh  balloon_motion.yaml
src/examples/3_balloon_masspoint/: all.sh
src/examples/4_pva_chasing/: all.sh  bag_all.sh  play.sh
src/mcl/: CMakeLists.txt  package.xml
src/mcl/config/: mcl.rviz
src/mcl/include/: mcl_filter.h
src/mcl/launch/: mcl_example.launch  mcl_filter_data.launch  mcl_filter_sim.launch
src/mcl/script/: MTE.py
src/mcl/src/: mcl_filter.cpp  one.cpp
src/offboard_pkg/: CMakeLists.txt
src/offboard_pkg/include/: utils.h  utils_offboard.h
src/offboard_pkg/launch/: mavros_sim.launch
src/offboard_pkg/script/: ZNZF_obs12.py  attack.py  obs.py  utils_att.py  utils_obs.py
src/offboard_pkg/src/: main.cpp  utils.cpp  utils_offboard.cpp
src/params/: CMakeLists.txt  balloon_motion.yaml  camera_params_action.yaml  camera_params_csi.yaml  camera_params_sim.yaml  camera_params_usb.yaml  mcl_filter_params_sim.yaml  mpcParameters.yaml  package.xml  path_constraint copy.yaml  path_constraint.yaml  path_constraint_sim.yaml  readme.yaml  rosconsole.config
src/params/launch/: load_camera_param.launch  load_param_real.launch  load_param_sim.launch  load_param_usb.launch
src/path/: CMakeLists.txt  package.xml
src/path/include/: path_logging.h  path_planning.h  time_optimal_PMM.h
src/path/launch/: path_logging.launch  path_planning.launch  receive_balloon.launch  sim_balloon.launch
src/path/script/: path_logger_plotter.py  time_optimal_PMM.py  time_optimal_PMM_single_axis.py
src/path/src/: path_finding.cpp  path_logging.cpp  path_planning.cpp  receive_balloon_motion_from_lidar.cpp  sim_balloon_motion.cpp  time_optimal_PMM.cpp  time_optimal_PMM_test.cpp
src/rflysim_ros_pkg/: CMakeLists.txt  package.xml  readme.md
src/rflysim_ros_pkg/launch/: depth_cpp.launch  depth_newprotocol_cpp.launch  depth_newprotocol_py.launch  depth_py.launch  gray_cpp.launch  gray_newprotocol_cpp.launch  gray_newprotocol_py.launch  gray_py.launch  gray_stereo_cpp.launch  gray_stereo_newprotocol_cpp.launch  gray_stereo_newprotocol_py.launch  gray_stereo_py.launch  imu_py.launch  obj.launch  rgb_cpp.launch  rgb_gray_depth_imu_py.launch  rgb_newprotocol_cpp.launch  rgb_newprotocol_py.launch  rgb_py.launch  vps_driver.launch
src/rflysim_ros_pkg/script/: Rflysim_obj.py  Rflysim_objwithsize.py  send_test.py
src/rflysim_ros_pkg/src/: image_receive.cpp  image_receive.py  image_receive_newprotocol.cpp  image_receive_newprotocol.py  imu_receive.py  vps2ros.cpp
src/simulation/: CMakeLists.txt
src/simulation/launch/: det_sim.launch
src/swarm_msgs/: CMakeLists.txt  package.xml  readme.md
src/swarm_msgs/action/: CheckForObjects.action
src/swarm_msgs/msg/: Action.msg  BoundingBox.msg  DiscreteTrajectory.msg  DiscreteTrajectoryPoint.msg  DoorBox.msg  DoorBoxes.msg  EntrancePose.msg  FixedPoint.msg  IdList.msg  Index.msg  MassPoint.msg  MassPoints.msg  PiecewiseBezier.msg  Pipeunit.msg  RflyObject.msg  SwarmInfo.msg  TimeOptimalPMMParam.msg  TimeOptimalPMMPieces.msg  Value.msg  Waypoint.msg
src/swarm_msgs/src/: simple.cpp
src/uav_simulator/DecompRos/decomp_ros_msgs/: CMakeLists.txt
src/uav_simulator/DecompRos/decomp_ros_utils/: CMakeLists.txt
src/uav_simulator/map_generator/: CMakeLists.txt
src/uav_simulator/quadrotor_msgs/: CMakeLists.txt
src/uav_simulator/quadrotor_msgs/msg/: PiecewiseBezier.msg  PositionCommand.msg
src/uav_simulator/so3_controller/: CMakeLists.txt
src/uav_simulator/so3_quadrotor/: CMakeLists.txt
src/uav_simulator/uav_simulator/config/: rviz_config.rviz
src/uav_simulator/uav_simulator/launch/: uav_simulator.launch
src/vision_opencv-noetic/cv_bridge/: CMakeLists.txt
src/yolo/: CMakeLists.txt  package.xml
src/yolo/launch/: action4.launch  det_yolo.launch  usb_cam_640_480_30hz.launch
src/yolo/scripts/: splitimg_receiver.py  usb_cam_driver.py
src/yolo/src/: det.cpp  det_bug1220.cpp  det_org.cpp  det_org0.cpp  det_org1.cpp  det_org1220.cpp  det_org2.cpp
src/yolo/src/src/: config.h  model.cpp  preprocess.cu
